--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "x-social-manager",
+  "name": "uinux-x-social-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,12 +11,18 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.0.0"
+    "next": "^14.0.0",
+    "better-sqlite3": "^9.2.2",
+    "openai": "^4.20.0",
+    "twitter-api-v2": "^1.15.0",
+    "date-fns": "^2.30.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/better-sqlite3": "^7.6.8",
     "typescript": "^5.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0"
