--- a/package.json
+++ b/package.json
@@ -9,22 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "next": "^14.0.0",
-    "better-sqlite3": "^9.2.2",
-    "openai": "^4.20.0",
-    "twitter-api-v2": "^1.15.0",
-    "date-fns": "^2.30.0",
-    "zod": "^3.22.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/better-sqlite3": "^7.6.8",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "typescript": "^5.0.0"
   }
 }
